--- a/connect.properties
+++ b/connect.properties
@@ -1,9 +1,9 @@
 config.storage.topic=hotel-config
 group.id=kafka-connect
-key.converter=JSON
+key.converter=org.apache.kafka.connect.json.JsonConverter
 offset.storage.topic=hotel-offset
 status.storage.topic=hotel-topic
-value.converter=JSON
+value.converter=org.apache.kafka.connect.json.JsonConverter
 config.storage.replication.factor=1
 offset.storage.replication.factor=1
 status.storage.replication.factor=1
