--- a/kafka/kafka.properties
+++ b/kafka/kafka.properties
@@ -10,3 +10,4 @@ num.partitions=1
 offsets.topic.replication.factor=1
 transaction.state.log.replication.factor=1
 transaction.state.log.min.isr=1
+advertised.listeners=PLAINTEXT://localhost:9092
