--- a/kafka/kafka.properties
+++ b/kafka/kafka.properties
@@ -1,7 +1,7 @@
 process.roles=broker,controller
 node.id=1
 controller.quorum.voters=1@localhost:9093
-listeners=PLAINTEXT://localhost:9092,CONTROLLER://localhost:9093
+listeners=PLAINTEXT://127.0.0.1:9092,PLAINTEXT://[::]:9092,CONTROLLER://localhost:9093
 inter.broker.listener.name=PLAINTEXT
 controller.listener.names=CONTROLLER
 listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
