--- a/kafka/kafka.properties
+++ b/kafka/kafka.properties
@@ -1,7 +1,7 @@
 process.roles=broker,controller
 node.id=1
 controller.quorum.voters=1@localhost:9093
-listeners=PLAINTEXT://127.0.0.1:9092,PLAINTEXT://[::]:9092,CONTROLLER://localhost:9093
+listeners=PLAINTEXT://:9092,CONTROLLER://:9093
 inter.broker.listener.name=PLAINTEXT
 controller.listener.names=CONTROLLER
 listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
@@ -10,4 +10,4 @@ num.partitions=1
 offsets.topic.replication.factor=1
 transaction.state.log.replication.factor=1
 transaction.state.log.min.isr=1
-advertised.listeners=PLAINTEXT://127.0.0.1:9092
+advertised.listeners=PLAINTEXT://:9092
