--- a/kafka-connect/connect.properties
+++ b/kafka-connect/connect.properties
@@ -7,3 +7,8 @@ value.converter=org.apache.kafka.connect.json.JsonConverter
 config.storage.replication.factor=1
 offset.storage.replication.factor=1
 status.storage.replication.factor=1
+connector.name=hotel-connector
+connector.class=io.debezium.connector.postgresql.PostgresConnector
+plugin.name=pgoutput
+snapshot.mode=when_needed
+schema.include.list=public
