--- a/kafka-connect/connect.properties
+++ b/kafka-connect/connect.properties
@@ -7,3 +7,4 @@ value.converter=org.apache.kafka.connect.json.JsonConverter
 config.storage.replication.factor=1
 offset.storage.replication.factor=1
 status.storage.replication.factor=1
+topic.creation.enable=true
