--- a/kafka-connect/connect.properties
+++ b/kafka-connect/connect.properties
@@ -8,3 +8,4 @@ config.storage.replication.factor=1
 offset.storage.replication.factor=1
 status.storage.replication.factor=1
 topic.creation.enable=true
+security.protocol=SSL
