--- a/kafka-connect/connect.properties
+++ b/kafka-connect/connect.properties
@@ -12,3 +12,4 @@ security.protocol=SASL_SSL
 sasl.mechanism=AWS_MSK_IAM
 sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
 sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
+auto.create.topics.enable=true
