--- a/kafka-connect/connect.properties
+++ b/kafka-connect/connect.properties
@@ -13,3 +13,5 @@ sasl.mechanism=AWS_MSK_IAM
 sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
 sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
 auto.create.topics.enable=true
+key.converter.schemas.enabled=false
+value.converter.schemas.enabled=false
