--- a/debezium/application.properties
+++ b/debezium/application.properties
@@ -2,3 +2,4 @@ debezium.sink.type=sqs
 debezium.source.connector.class=io.debezium.connector.postgresql.PostgresConnector
 debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
+debezium.source.plugin.name=pgoutput
