--- a/debezium/application.properties
+++ b/debezium/application.properties
@@ -1,4 +1,6 @@
-debezium.sink.type=sqs
+debezium.sink.type=kafka
+debezium.sink.kafka.producer.key.serializer=org.apache.kafka.common.serialization.Serializer.JsonSerializer
+debezium.sink.kafka.producer.value.serializer=org.apache.kafka.common.serialization.Serializer.JsonSerializer
 debezium.source.connector.class=io.debezium.connector.postgresql.PostgresConnector
 debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
