--- a/kafka/kafka.properties
+++ b/kafka/kafka.properties
@@ -1,4 +1,5 @@
 process.roles=broker,controller
+listeners=PLAINTEXT://:9092,CONTROLLER://:9093
 inter.broker.listener.name=PLAINTEXT
 controller.listener.names=CONTROLLER
 listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
