--- a/kafka/kafka.properties
+++ b/kafka/kafka.properties
@@ -1,8 +1,8 @@
 process.roles=broker,controller
-listeners=PLAINTEXT://:9092,CONTROLLER://:9093
+listeners=PLAINTEXT://:9092,DEBEZIUM://:9091,CONTROLLER://:9093
 inter.broker.listener.name=PLAINTEXT
 controller.listener.names=CONTROLLER
-listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,DEBEZIUM:PLAINTEXT
 log.dirs=/kafka/kraft-combined-logs
 num.partitions=1
 offsets.topic.replication.factor=2
