--- a/data-streaming/debezium/application.properties
+++ b/data-streaming/debezium/application.properties
@@ -2,3 +2,4 @@ debezium.source.connector.class=io.debezium.connector.postgresql.PostgresConnect
 debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
 debezium.source.plugin.name=pgoutput
+debezium.sink.type=pubsub
