--- a/data-streaming/debezium/application.properties
+++ b/data-streaming/debezium/application.properties
@@ -3,6 +3,4 @@ debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
 debezium.source.plugin.name=pgoutput
 debezium.source.tombstones.on.delete=false
-debezium.sink.type=pubsub
-debezium.sink.pubsub.flowControl.enabled=true
-debezium.sink.pubsub.flowControl.max.outstanding.messages=10
+debezium.sink.type=pubsublite
