--- a/data-streaming/debezium/application.properties
+++ b/data-streaming/debezium/application.properties
@@ -3,4 +3,5 @@ debezium.source.offset.storage.file.filename=data/offsets.dat
 debezium.source.offset.flush.interval.ms=0
 debezium.source.plugin.name=pgoutput
 debezium.source.tombstones.on.delete=false
+debezium.source.table.exclude.list=public.user
 debezium.sink.type=pubsublite
